# init-back

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agents.md  cli.py  docker-compose.yml  gh_issues.py  graph.py  graph_sitter_patch.py  issue_text.py  justfile  llm.py  main.py  pyproject.toml  search.py
app/: auth.py
features/: auth.py  code_graph.py  developer.py  events.py  gh_issues.py  github.py  graph_sitter_patch.py  llm.py  search.py  supabase.py  technologies.py
graph_store/: __init__.py  base.py  memgraph.py  memory.py  models.py
models/: developer.py
pr_pattern_analyzer/: __init__.py  evidence.py  llm.py  models.py  playbook.py
pr_pattern_analyzer/prompts/: synthesis.txt
routes/: __init__.py  auth.py  developer.py  gh_issues.py  github_stats.py  pr_pattern.py  repo.py  repo_analysis.py
sql/: analyses.sql  playbooks.sql  profiles.sql  repositories.sql
tools/: analyse.mjs
